<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Time Now</string>
	<string name="system_time_label">Phone</string>
	<string name="gps_time_label">GPS</string>
	<string name="ntp_time_label">NTP</string>
	<string name="default_time">--:--:--.---</string>
	<string name="phone_time_label">Phone Local Time:</string>
	<string name="time_source_label">Accurate Time:</string>
	<string name="source_ntp">NTP</string>
	<string name="source_gps">GPS</string>
	<string name="source_time">Source Time</string>
	<string name="phone_time">Phone Time</string>
	<string name="uptime">Uptime</string>
	<string name="accuracy">Accuracy</string>
	<string name="ntp_ip">NTP Server IP</string>
	<string name="ntp_name">NTP Server Name</string>
	<string name="ntp_rtt">NTP request round trip time</string>
	<string name="gps_longitude">Longitude</string>
	<string name="gps_latitude">Latitude</string>
	<string name="gps_altitude">Altitude</string>
	<string name="gps_accuracy">Accuracy</string>
	
	<string name="timespan_prefix_positive"></string>
	<string name="timespan_prefix_negative"></string>
	<string name="timespan_postfix_positive">ahead</string>
	<string name="timespan_postfix_negative">late</string>
	
	<plurals name="timespan_microsecond">
		<item quantity="one">microsecond</item>
		<item quantity="other">microseconds</item>
	</plurals>
	<plurals name="timespan_second">
		<item quantity="one">second</item>
		<item quantity="other">seconds</item>
	</plurals>
	<plurals name="timespan_minute">
		<item quantity="one">minute</item>
		<item quantity="other">minutes</item>
	</plurals>
	<plurals name="timespan_hour">
		<item quantity="one">hour</item>
		<item quantity="other">hours</item>
	</plurals>
	<plurals name="timespan_day">
		<item quantity="one">day</item>
		<item quantity="other">days</item>
	</plurals>
	<plurals name="timespan_week">
		<item quantity="one">week</item>
		<item quantity="other">weeks</item>
	</plurals>
	<plurals name="timespan_month">
		<item quantity="one">month</item>
		<item quantity="other">months</item>
	</plurals>
	<plurals name="timespan_year">
		<item quantity="one">year</item>
		<item quantity="other">years</item>
	</plurals>

	<color name="text_background_normal">#f69c00</color>
	<color name="text_background_focused">#a2f600</color>
	<color name="text_foreground_dark">#000000</color>
	<string name="menu_setting">Settings</string>
	<string name="menu_about">About</string>
	<!-- Preferences -->
	<string name="pref_title">Preferences</string>
	<string name="pref_ntp_title">NTP Settings</string>
	<string name="pref_ntp_summary">configure NTP relative settings.</string>
	<string name="pref_ntp_summary_enabled">NTP is enabled</string>
	<string name="pref_ntp_summary_disabled">NTP is disabled</string>
	<string name="pref_ntp_server">NTP Server</string>
	<string name="pref_ntp_server_default">pool.ntp.org</string>
	<string name="pref_ntp_server_message">Please input NTP server address:</string>
	<string name="pref_ntp_enable">Enable NTP</string>
	<string name="pref_ntp_enable_default">true</string>
	<string name="pref_gps_title">GPS Settings</string>
	<string name="pref_gps_summary_enabled">GPS is enabled</string>
	<string name="pref_gps_disabled">GPS is disabled</string>
	<string name="pref_gps_enable">Enable GPS</string>
	<string name="pref_gps_enable_default">true</string>
	
	<string name="about_title">About Time Now</string>
	<string name="about_message">This is an app made by Tao Wang (dancefire@gmail.com).</string>
	
	<string name="toast_message">"Please set time to
%1$s %2$s
(offset: %3$s)"
	</string>
	<string name="toast_message_ok">"Time is synchronized!
(offset: %1$s)"</string>
	<string name="menu_synchronize">Synchronize</string>
	<string name="pref_ntp_wifionly_summary_on">Synchronize time only when Wi-Fi connection is available.</string>
	<string name="pref_ntp_wifionly_summary_off">Synchronize time whenever Wi-Fi connection is available.</string>
	<string name="pref_ntp_wifionly_title">Only use NTP on Wi-Fi</string>
	<string name="pref_generic_group_title">General</string>
	<string name="pref_generic_toast_title">Enable Toast</string>
	<string name="pref_generic_toast_summary">Use Toast to help time setting in rootless mode</string>
	<string name="pref_generic_autosync_title">Auto Sync</string>
	<string name="pref_generic_autosync_summary">Automatically synchronize the time in the background.</string>
	<string name="pref_generic_rootless_title">Rootless Mode Only</string>
	<string name="pref_generic_rootless_summary">Force to use rootless mode, even the device is rooted.</string>
	<string name="pref_generic_autotimezone_title">Auto detect Time Zone</string>
	<string name="pref_generic_autotimezone_summary">Automatically detect time zone based on current location or network information.</string>
	<string name="pref_generic_synconboot_title">Sync on boot</string>
	<string name="pref_generic_synconboot_summary">Synchronize time after the device is booted.</string>
	<string name="pref_help_group_title">Help</string>
</resources>
