<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:keepScreenOn="true">
	<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/phone_time_label"></TextView>
	<LinearLayout android:id="@+id/linearLayout"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="vertical" android:layout_margin="10dp"
		android:background="@color/text_background_normal" android:gravity="center_horizontal"
		android:layout_gravity="center|center_horizontal">
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/default_time" android:id="@+id/phone_time"
			android:background="@drawable/clock_text_background"
			android:layout_height="match_parent" android:layout_width="match_parent"
			android:gravity="center|center_horizontal" android:layout_gravity="center|center_horizontal"
			android:paddingLeft="10dp" android:paddingRight="10dp" android:textColor="@color/text_foreground_dark"></TextView>
	</LinearLayout>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView3"
		android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/time_source_label"></TextView>
	<ListView android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/list_time"></ListView>

</LinearLayout>
