<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:id="@+id/LinearLayout01"
	android:orientation="vertical">
	<AnalogClock
		android:id="@+id/AnalogClock01"
		android:layout_gravity="center"
		android:layout_height="240sp"
		android:layout_width="wrap_content">
	</AnalogClock>
	<TableLayout
		android:id="@+id/TableLayout01"
		android:layout_gravity="center"
		android:gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TableRow
			android:id="@+id/TableRow01"
			android:padding="5sp"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/SystemTimeLabel"
				android:text="@string/system_time_label"
				android:paddingRight="10sp"
				android:textSize="20sp"
				android:textColor="#FFFFFF"
				android:textStyle="bold"
				android:shadowColor="#000000"
				android:shadowDy="1.0"
				android:shadowRadius="3.0"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
			<TextView
				android:id="@+id/SystemTime"
				android:text="@string/default_time"
				android:typeface="monospace"
				android:singleLine="true"
				android:paddingLeft="10sp"
				android:paddingRight="10sp"
				android:textSize="20sp"
				android:textColor="#000000"
				android:gravity="center"
				android:background="@drawable/clock_text_background_2"
				android:layout_gravity="right"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			</TextView>
			<ImageButton
				android:src="@drawable/transparent_background"
				android:background="@drawable/transparent_background">
			</ImageButton>
		</TableRow>
		<TableRow
			android:id="@+id/TableRow02"
			android:padding="5sp"
			android:gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/NTPTimeLabel"
				android:text="@string/ntp_time_label"
				android:paddingRight="10sp"
				android:textSize="20sp"
				android:textColor="#FFFFFF"
				android:textStyle="bold"
				android:shadowColor="#000000"
				android:shadowDy="1.0"
				android:shadowRadius="3.0"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
			<TextView
				android:id="@+id/NTPTime"
				android:text="@string/default_time"
				android:typeface="monospace"
				android:singleLine="true"
				android:paddingLeft="10sp"
				android:paddingRight="10sp"
				android:textSize="20sp"
				android:textColor="#000000"
				android:gravity="center"
				android:background="@drawable/clock_text_background_2"
				android:layout_gravity="right"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			</TextView>
			<ImageButton
				android:id="@+id/SyncNTP"
				android:src="@android:drawable/ic_popup_sync">
			</ImageButton>
		</TableRow>
		<TableRow
			android:id="@+id/TableRow03"
			android:padding="5sp"
			android:gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/GPSTimeLabel"
				android:text="@string/gps_time_label"
				android:paddingRight="10sp"
				android:textSize="20sp"
				android:textColor="#FFFFFF"
				android:textStyle="bold"
				android:shadowColor="#000000"
				android:shadowDy="1.0"
				android:shadowRadius="3.0"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			</TextView>
			<TextView
				android:id="@+id/GPSTime"
				android:text="@string/default_time"
				android:typeface="monospace"
				android:singleLine="true"
				android:paddingLeft="10sp"
				android:paddingRight="10sp"
				android:textSize="20sp"
				android:textColor="#000000"
				android:gravity="center"
				android:background="@drawable/clock_text_background_2"
				android:layout_gravity="right"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			</TextView>
			<ImageButton
				android:id="@+id/SyncGPS"
				android:src="@android:drawable/ic_popup_sync">
			</ImageButton>
		</TableRow>
	</TableLayout>
</LinearLayout>
